# urban-futures

./: .env.mediaflux  .gitattributes  .gitignore  ACTIVITY_LOG.md  AGENTS.md  CLAUDE.md  ENVIRONMENT.md  FIRST_MACHINE_SETUP.md  MEDIAFLUX.md  REPO_CLEANUP_LOG.md  a_info_treeGraphs.py  app.py  combine-blocks.py  habitat-systems.json  habitat-systems2.json  habitat-systems3.json  info_persona_capabilities.py  photoshop_export_indesign_flat.jsx  pyproject.toml  query.py  requirements.txt  saveroutine.py  single_cylinder_no_caps.stl  sscamera_views.json  test.py  test2.py  testCamera.py  test_template_library_loader.py  uv  uv.cmd
_archive/: camera_params.json  csvparser.py  final_geoSpatialConverter.py  geoTiffGetter.py  plot_kmz.py  process_obj_files.py  stakeholders_camera_views.json  test3.py  viewer.py
_code-refactored/: AGENTS.md
_documentation-refactored/: DATA_PIPELINE_SCRIPT_SUMMARIES.md  MACHINE_SETUP_MEDIAFLUX.md  MEDIAFLUX_SYNC_CONTRACT.md  scenario_engine_statistics_comparison.md  scenario_engine_v2_canonical_checklist.md  scenario_engine_v2_model.md  scenario_engine_v2_status.md  scenario_engine_v3_naming_cleanup.md  scenario_engine_v3_overview.md  scenario_engine_v3_plan.md  scenario_engine_v3_pointdata_schema.md  scenario_engine_v3_render_schema.md  scenario_engine_v3_status.md  scenario_engine_v3_template-library-migration.md  scenario_engine_v3_validation.md  scenario_engine_v4_overview.md  v4 restructure handoff.md  v4 restructure.md  validation.md
_futureSim_refactored/: AGENTS.md  __init__.py  paths.py  v4visualisation-instructions.md
ss/: mask.py  (+4 more)
(+1141 files in other folders)
